Update package.json and asmdef for rename #AI

--- a/Packages/jp.keijiro.yamu/Editor/Nyamu.asmdef
+++ b/Packages/jp.keijiro.yamu/Editor/Nyamu.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "Yamu",
+    "name": "Nyamu",
     "rootNamespace": "",
     "references": [
         "GUID:0acc523941302664db1f4e527237feb3",
