Update documentation and metadata for Nyamu rename #AI

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,6 @@ jobs:
       with:
         registry-url: 'https://registry.npmjs.org'
     - run: npm publish
-      working-directory: Packages/jp.keijiro.yamu
+      working-directory: Packages/dev.polyblank.nyamu
       env:
         NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
