Add editor_exit_play_mode tool with proper Unity main thread execution

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,5 @@
 [pytest]
+asyncio_mode = auto
 markers =
     essential: Essential tests that must always pass
     mcp: MCP client/server functionality tests
