--- a/IntegrationTests/requirements.txt
+++ b/IntegrationTests/requirements.txt
@@ -1,5 +1,6 @@
-pytest==7.4.3
-pytest-asyncio==0.23.8
+pytest>=9.0.0
+pytest-asyncio>=1.3.0
 requests==2.31.0
 aiohttp==3.9.1
 mcp>=1.0.0
+trio>=0.32.0  # For potential anyio trio backend usage
