--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,6 @@
 [pytest]
 asyncio_mode = auto
+asyncio_default_fixture_loop_scope = function
 markers =
     essential: Essential tests that must always pass
     mcp: MCP client/server functionality tests
