--- a/Nyamu.UnityTestProject/Packages/manifest.json
+++ b/Nyamu.UnityTestProject/Packages/manifest.json
@@ -4,6 +4,7 @@
     "com.unity.ide.visualstudio": "2.0.23",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.10",
+    "dev.polyblank.nyamu": "file:../../Nyamu.UnityPackage",
     "com.unity.modules.physics": "1.0.0"
   }
 }
