Optimize integration tests for faster execution and fix parallel test deadlock #AI

--- a/IntegrationTests/requirements.txt
+++ b/IntegrationTests/requirements.txt
@@ -1,5 +1,7 @@
 pytest>=9.0.0
 pytest-asyncio>=1.3.0
+pytest-xdist>=3.0.0  # Parallel test execution
+pytest-random-order>=1.2.0  # Test randomization for independence verification
 requests==2.31.0
 aiohttp==3.9.1
 mcp>=1.0.0
