--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,13 @@
 [pytest]
 asyncio_mode = auto
 asyncio_default_fixture_loop_scope = function
+
+# Parallel execution settings
+# Use -n auto to run tests in parallel with all CPU cores
+# Use -n 2 to test with 2 workers
+# addopts = -n auto  # Uncomment to enable parallel by default
+
+# Test markers for selective execution
 markers =
     essential: Essential tests that must always pass
     mcp: MCP client/server functionality tests
@@ -9,3 +16,8 @@ markers =
     slow: Tests that take longer to run
     structural: Tests that modify Unity project structure (files/directories)
     protocol: Pure MCP protocol tests that don't need Unity state management
+    fast: Fast tests (protocol + simple MCP tests)
+
+# Test collection order - run fast tests first for quick feedback
+# Uncomment to enable test ordering (requires pytest-order plugin)
+# order_scope = module
