--- a/IntegrationTests/requirements.txt
+++ b/IntegrationTests/requirements.txt
@@ -6,3 +6,4 @@ requests==2.31.0
 aiohttp==3.9.1
 mcp>=1.0.0
 trio>=0.32.0  # For potential anyio trio backend usage
+psutil # To allow pytest-xdist determine physical cores count
