Fix race condition in NyamuProjectsRegistry.json for parallel tests #AI
- Add pre_register_project_port() to sequentially register projects
- Use Unity batch-mode with global file lock for safe registration
- Prevent registry corruption when multiple workers start simultaneously
- Add filelock dependency for cross-process synchronization
- Update conftest.py to pre-register before starting Unity instances
- Create TODO.md to track parallel testing improvements

--- a/IntegrationTests/requirements.txt
+++ b/IntegrationTests/requirements.txt
@@ -7,3 +7,4 @@ aiohttp==3.9.1
 mcp>=1.0.0
 trio>=0.32.0  # For potential anyio trio backend usage
 psutil # To allow pytest-xdist determine physical cores count
+filelock>=3.0.0  # Cross-process file locking for registry synchronization
