--- a/.releaserc.json
+++ b/.releaserc.json
@@ -10,5 +10,6 @@
       "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
     }],
     "@semantic-release/github"
-  ]
+  ],
+  "initialVersion": "0.1.0"
 }
