--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,49 +1,83 @@
 name: CI
+
 on:
   push:
     branches:
-    - main
+      - main
+
 permissions:
   contents: write
+
 jobs:
   release:
     name: release
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v6
-      with:
-        fetch-depth: 0
-    - name: Semantic release
-      id: semantic
-      uses: cycjimmy/semantic-release-action@v6
-      with:
-        extra_plugins: |
-          @semantic-release/changelog
-          @semantic-release/git
-        branch: main
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    - name: Create upm branch
-      run: |
-        git branch -d upm &> /dev/null || echo upm branch not found
-        git subtree split -P "$PKG_ROOT" -b upm
-        git checkout upm
-        git config --global user.name 'github-bot'
-        git config --global user.email 'github-bot@users.noreply.github.com'
-        if [[ -d "Samples" ]]; then
-          git mv Samples Samples~
-          rm -f Samples.meta
-          git commit -am "fix: Samples => Samples~"
-        fi
-        git checkout main -- README.md CHANGELOG.md
-        git commit -am "chore: copy README.md and CHANGELOG.md from main"
-        git push -f -u origin upm
-      env:
-        PKG_ROOT: Nyamu.UnityPackage
-    - name: Create upm git tag
-      if: steps.semantic.outputs.new_release_published == 'true'
-      run: |
-        git tag $TAG upm
-        git push origin --tags
-      env:
-        TAG: upm/v${{ steps.semantic.outputs.new_release_version }}
+      # 1. Checkout repository
+      - uses: actions/checkout@v6
+        with:
+          fetch-depth: 0
+
+      # 3. Semantic release
+      - name: Semantic release
+        id: semantic
+        uses: cycjimmy/semantic-release-action@v6
+        with:
+          extra_plugins: |
+            @semantic-release/changelog
+            @semantic-release/git
+          branch: main
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      # 3. Optional UnityPackage export
+      - name: Export UnityPackage (optional)
+        if: steps.semantic.outputs.new_release_published == 'true'
+        continue-on-error: true
+        uses: game-ci/unity-actions@v4
+        with:
+          version: 2021.3.45f2
+          targetPlatform: StandaloneLinux64
+          projectPath: Nyamu.UnityTestProject
+          customParameters: -executeMethod ExportUnityPackage.Export -quit -batchmode -nographics
+        env:
+          UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+
+      # 4. Optional upload to GitHub Release
+      - name: Upload UnityPackage to GitHub Release (optional)
+        if: steps.semantic.outputs.new_release_published == 'true'
+        continue-on-error: true
+        uses: softprops/action-gh-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          files: Nyamu.UnityTestProject/Artifacts/dev.polyblank.nyamu-${{ steps.semantic.outputs.new_release_version }}.unitypackage
+
+
+      # 5. Create upm branch
+      - name: Create upm branch
+        run: |
+          git branch -d upm &> /dev/null || echo upm branch not found
+          git subtree split -P "$PKG_ROOT" -b upm
+          git checkout upm
+          git config --global user.name 'github-bot'
+          git config --global user.email 'github-bot@users.noreply.github.com'
+          if [[ -d "Samples" ]]; then
+            git mv Samples Samples~
+            rm -f Samples.meta
+            git commit -am "fix: Samples => Samples~"
+          fi
+          git checkout main -- README.md CHANGELOG.md
+          git commit -am "chore: copy README.md and CHANGELOG.md from main"
+          git push -f -u origin upm
+        env:
+          PKG_ROOT: Nyamu.UnityPackage
+
+      # 6. Create upm git tag
+      - name: Create upm git tag
+        if: steps.semantic.outputs.new_release_published == 'true'
+        run: |
+          git tag $TAG upm
+          git push origin --tags
+        env:
+          TAG: upm/v${{ steps.semantic.outputs.new_release_version }}
