--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           fetch-depth: 0
 
-      # 3. Semantic release
+      # 2. Semantic release
       - name: Semantic release
         id: semantic
         uses: cycjimmy/semantic-release-action@v6
@@ -30,7 +30,19 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      # 3. Optional UnityPackage export
+      # 3. Restore Unity Cache (optional)
+      - name: Restore Unity Cache (optional)
+        if: steps.semantic.outputs.new_release_published == 'true'
+        continue-on-error: true
+        uses: actions/cache@v3
+        with:
+          path: Nyamu.UnityTestProject/Library
+          key: Library-Nyamu-StandaloneLinux64
+          restore-keys: |
+            Library-Nyamu-
+            Library-
+
+      # 4. Export UnityPackage (optional)
       - name: Export UnityPackage (optional)
         if: steps.semantic.outputs.new_release_published == 'true'
         continue-on-error: true
@@ -44,7 +56,7 @@ jobs:
           UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
 
 
-      # 4. Optional upload to GitHub Release
+      # 5. Upload UnityPackage to GitHub Release (optional)
       - name: Upload UnityPackage to GitHub Release (optional)
         if: steps.semantic.outputs.new_release_published == 'true'
         continue-on-error: true
@@ -56,7 +68,7 @@ jobs:
           files: Nyamu.UnityTestProject/Artifacts/dev.polyblank.nyamu-${{ steps.semantic.outputs.new_release_version }}.unitypackage
 
 
-      # 5. Create upm branch
+      # 6. Create upm branch
       - name: Create upm branch
         run: |
           git branch -d upm &> /dev/null || echo upm branch not found
@@ -75,7 +87,7 @@ jobs:
         env:
           PKG_ROOT: Nyamu.UnityPackage
 
-      # 6. Create upm git tag
+      # 7. Create upm git tag
       - name: Create upm git tag
         if: steps.semantic.outputs.new_release_published == 'true'
         run: |
