ci: Trying to fix game-ci/unity-builder #4 // revert changes made by running a build

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,6 +73,7 @@ jobs:
       # 6. Create upm branch
       - name: Create upm branch
         run: |
+          git checkout -- .
           git branch -d upm &> /dev/null || echo upm branch not found
           git subtree split -P "$PKG_ROOT" -b upm
           git checkout upm
