--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,6 +88,7 @@ jobs:
           git subtree split -P "$PKG_ROOT" -b upm
           git checkout upm
           git push -f -u origin upm
+          git checkout main
         env:
           PKG_ROOT: Nyamu.UnityPackage
 
