--- a/Nyamu.UnityTestProject/Packages/manifest.json
+++ b/Nyamu.UnityTestProject/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.burst": "1.8.26",
     "com.unity.ide.rider": "3.0.37",
     "com.unity.ide.visualstudio": "2.0.23",
     "com.unity.ide.vscode": "1.2.5",
